# rim

./: .cursorrules  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_zh.md
src/: main.rs
src/animation/: mod.rs
src/export/: mod.rs
src/interaction/: mod.rs
src/math_objects/: axes.rs  basic_shapes.rs  function_graph.rs  mod.rs
src/render/: mod.rs
src/scene/: mod.rs
